# paideia

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
app/: main.py
app/scripts/: ingest_pdf.py
