[tool.poetry]
name = "paideia"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.2.1"
openai = "^2.7.1"
pinecone = "^8.0.0"
tiktoken = "^0.12.0"
langchain = "^1.0.5"
langgraph = "^1.0.2"
httpx = "^0.28.1"
requests = "^2.31.0"
pymupdf = "^1.26.6"
regex = "^2025.11.3"
numpy = "^2.3.4"
opencv-python = "^4.8.0"
pandas = "^2.3.3"
sympy = "^1.14.0"
scipy = "^1.16.3"
mpxpy = "^0.0.18"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.2,<9"
pytest-asyncio = ">=1.2,<2"
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.4"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
